[gd_scene load_steps=6 format=3 uid="uid://bprr1hrxurvhi"]

[ext_resource type="PackedScene" uid="uid://d2adm7te6xjes" path="res://player/player.tscn" id="1_2q6dc"]
[ext_resource type="Script" uid="uid://bdwkdmpefucry" path="res://scenes/level.gd" id="1_ppgk2"]
[ext_resource type="PackedScene" uid="uid://tvgmvgxgjj38" path="res://objects/bed.tscn" id="2_w8frs"]
[ext_resource type="PackedScene" uid="uid://ben858ju7wqko" path="res://objects/table.tscn" id="4_mx8sn"]
[ext_resource type="PackedScene" uid="uid://3vvby7kvn57o" path="res://npc/drone.tscn" id="5_ppgk2"]

[node name="Level" type="Node2D"]
script = ExtResource("1_ppgk2")

[node name="Bed" parent="." instance=ExtResource("2_w8frs")]
z_index = -1
position = Vector2(552, 211)

[node name="player" parent="." instance=ExtResource("1_2q6dc")]
position = Vector2(584, 368)

[node name="table" parent="." instance=ExtResource("4_mx8sn")]
position = Vector2(413, 324)

[node name="ass" parent="." instance=ExtResource("5_ppgk2")]
position = Vector2(734, 365)

[node name="projectiles" type="Node2D" parent="."]

[connection signal="player_enter" from="Bed" to="." method="_on_bed_player_enter"]
[connection signal="player_exit" from="Bed" to="." method="_on_bed_player_exit"]
[connection signal="fireball" from="player" to="." method="_on_player_fireball"]
[connection signal="grenade" from="player" to="." method="_on_player_grenade"]
